--- a/public/src/app/templates/askdetail/AskDetailPersonView.html
+++ b/public/src/app/templates/askdetail/AskDetailPersonView.html
@@ -4,8 +4,8 @@
 			<var> 
 				<img src="<%= avatar %>" alt="<%= avatar %>">
 			</var>  
+            <% if (is_star) { %>
         		<i class="bg-sprite-rebirth middle-v-icon"></i>
-            <% if (isstar) { %>
         	<% } %>
 		</span>
 		<span class="personal-name"><%= nickname %></span>
