--- a/public/src/app/templates/channel/AskChannelView.html
+++ b/public/src/app/templates/channel/AskChannelView.html
@@ -22,7 +22,7 @@
 								<a target="_blank" href="#homepage/reply/<%= uid %>">
 									<span class="name">
 										<var><%= nickname %></var>
-						                <% if (isstar) { %>
+						                <% if (is_star) { %>
 		                				<i class="bg-sprite-rebirth small-v-icon"></i>
 						                <% } %>
 			            			</span>
@@ -51,7 +51,7 @@
 				<a target="_blank" href="#homepage/reply/<%= uid %>">
 					<span class="name demmand-position-name">
 						<var><%= nickname %></var>
-		                <% if (isstar) { %>
+		                <% if (is_star) { %>
 	                    <i class="bg-sprite-rebirth small-v-icon"></i>
 		                <% } %>
             		</span>
