--- a/public/src/app/templates/channel/ChannelActivityView.html
+++ b/public/src/app/templates/channel/ChannelActivityView.html
@@ -8,7 +8,7 @@
 		<span class="reply-name">
 			<a href="#homepage/reply/<%=  uid %>" class="reply-name-v clearfix">
                	<var><%= nickname %></var>
-                <% if (isstar) { %>
+                <% if (is_star) { %>
                 	<i class="bg-sprite-rebirth small-v-icon"></i>
                 <% } %>
 			</a>
