--- a/public/src/app/templates/channel/ChannelDemandView.html
+++ b/public/src/app/templates/channel/ChannelDemandView.html
@@ -16,7 +16,7 @@
     	<span class="demmand-position-right">
     		<em class="demmand-position-name clearfix">
                 <var><%= nickname %></var>
-                <% if (isstar) { %>
+                <% if (is_star) { %>
                     <i class="bg-sprite-rebirth small-v-icon"></i>
                 <% } %>
             </em>
@@ -31,7 +31,7 @@
     		<span class="position-right">
 		         <em class="demmand-position-name clearfix">
                     <var><%= nickname %></var>
-                    <% if (isstar) { %>
+                    <% if (is_star) { %>
                         <i class="bg-sprite-rebirth small-v-icon"></i>
                     <% } %>
                 </em>
