--- a/public/src/app/templates/channel/ChannelFoldView.html
+++ b/public/src/app/templates/channel/ChannelFoldView.html
@@ -26,7 +26,7 @@
 				</span>
 				<span class="fold-name-v clearfix">
 	            	<var><%= nickname %></var>
-	                <% if (isstar) { %>
+	                <% if (is_star) { %>
 	            		<i class="bg-sprite-rebirth small-v-icon"></i>
 	                <% } %>
 				</span>
@@ -67,7 +67,7 @@
 						</span>
 						<span class="fold-name-v clearfix">
 		            		<var><%= reply.nickname %></var>
-			                <% if (isstar) { %>
+			                <% if (is_star) { %>
 		            			<i class="bg-sprite-rebirth small-v-icon"></i>
 			                <% } %>
 						</span>
