--- a/public/src/app/templates/homepage/HomeFansView.html
+++ b/public/src/app/templates/homepage/HomeFansView.html
@@ -3,7 +3,7 @@
         <a target="_blank" href="#homepage/reply/<%= uid %>" class="avatar-header">
             <img src="<%= avatar %>" alt="">
                 <i class="bg-sprite-rebirth middle-v-icon"></i>
-            <% if (isstar) { %>
+            <% if (is_star) { %>
             <% } %>
         </a>
     </div>
