--- a/public/src/app/templates/homepage/HomeHeadView.html
+++ b/public/src/app/templates/homepage/HomeHeadView.html
@@ -4,7 +4,7 @@
 		<div class="home-avater">
 			<span class="avatar-header">
 				<img src="<%= avatar %>" alt="<%= username %>">
-                <% if (isstar) { %>
+                <% if (is_star) { %>
             		<i class="bg-sprite-rebirth big-v-icon"></i>
             	<% } %>
 			</span>
