--- a/public/src/app/templates/index/IndexItemView.html
+++ b/public/src/app/templates/index/IndexItemView.html
@@ -25,7 +25,7 @@
 		</a>
 		<span class="hot-name">
 			<var class="foot-write"><%= nickname %></var>
-			<% if (isstar) { %>
+			<% if (is_star) { %>
 				<i class="bg-sprite-rebirth small-v-icon"></i>
 			<% } %>
 		</span>
