--- a/public/src/app/templates/replydetailplay/ReplyDetailCommentView.html
+++ b/public/src/app/templates/replydetailplay/ReplyDetailCommentView.html
@@ -6,7 +6,7 @@
 		<div class="clearfix">
 			<a target="_blank" class="reply-name" href="#homepage/reply/<%= uid %>">
 				<var><%= nickname %></var>
-                <% if (isstar) { %>
+                <% if (is_star) { %>
         			<i class="bg-sprite-rebirth small-v-icon"></i>
                 <% } %>
 			</a>
