--- a/public/src/app/templates/search/ThreadItemView.html
+++ b/public/src/app/templates/search/ThreadItemView.html
@@ -20,7 +20,7 @@
 		<span class="hot-name">
 			<!-- <%= nickname %> -->
 			<var class="name"><%= nickname %></var>
-            <% if (isstar) { %>
+            <% if (is_star) { %>
         		<i class="bg-sprite-rebirth small-v-icon"></i>
             <% } %>
 		</span>
