--- a/public/src/app/templates/search/UserItemView.html
+++ b/public/src/app/templates/search/UserItemView.html
@@ -5,7 +5,7 @@
 	<span class="person-message">
 		<a target="_blank" href="#homepage/reply/<%= uid %>" class="clearfix">
 			<span class="name"><%= nickname %></span>
-            <% if (isstar) { %>
+            <% if (is_star) { %>
         		<i class="bg-sprite-rebirth small-v-icon"></i>
             <% } %>
 		</a>
