--- a/public/src/app/templates/trend/TrendView.html
+++ b/public/src/app/templates/trend/TrendView.html
@@ -5,7 +5,7 @@
 			<a target="_blank" href="#homepage/reply/<%= uid %>">
 				<span class="avatar-header">
 					<img src="<%= avatar %>" alt="<%= avatar %>">
-	                <% if (isstar) { %>
+	                <% if (is_star) { %>
                 		<i class="bg-sprite-rebirth middle-v-icon"></i>
                 	<% } %>
 				</span>
