--- a/public/src/app/templates/upload/InprogressItemView.html
+++ b/public/src/app/templates/upload/InprogressItemView.html
@@ -5,7 +5,7 @@
         </span>
         <span class="name">
             <var><%= nickname %></var>
-            <% if (isstar) { %>
+            <% if (is_star) { %>
                 <i class="bg-sprite-rebirth small-v-icon"></i>
             <% } %>
         </span>
