--- a/public/src/app/templates/replydetailplay/ReplyDetailPersonView.html
+++ b/public/src/app/templates/replydetailplay/ReplyDetailPersonView.html
@@ -5,7 +5,7 @@
 				<img src="<%= avatar %>" alt="<%= avatar %>">
 			</var>  
         		<i class="bg-sprite-rebirth middle-v-icon"></i>
-            <% if (isstar) { %>
+            <% if (is_star) { %>
         	<% } %>
 		</span>
 		<span class="personal-name"><%= nickname %></span>
