--- a/public/src/less/homepage.less
+++ b/public/src/less/homepage.less
@@ -533,7 +533,7 @@
                     float: left;
                     width: 693px;
                     margin-bottom: 18px;
-                    a {
+                    .collection-header-content   {
                         float: left;
                         em {
                             display: -webkit-box;
@@ -550,12 +550,25 @@
                                 border-radius: 50%;
                             }
                         }
-                        span {
+                        .name-v {   
                             float: left;
                             height: 24px;
                             line-height: 24px;
-                            color: #757575;
-                            font-size: 14px;
+                            var {
+                                float: left;
+                                height: 22px;
+                                max-width: 70px;
+                                margin-right: 3px;
+                                color: #757575;
+                                font-size: 14px;
+                            }
+                            .small-v-icon {
+                                float: left;
+                                width: 12px;
+                                height: 12px;
+                                margin-top: 4px;
+                                background-position: -258px -68px;
+                            }
                         }
                     }
                     .conduct-time {
@@ -667,7 +680,7 @@
                     float: left;
                     width: 693px;
                     margin-bottom: 18px;
-                    a {
+                    .collection-header-content {
                         float: left;
                         em {
                             display: -webkit-box;
@@ -684,12 +697,27 @@
                                 border-radius: 50%;
                             }
                         }
-                        span {
+                        .name-v {
                             float: left;
                             height: 24px;
                             line-height: 24px;
-                            color: #757575;
-                            font-size: 14px;
+                            var {
+                                float: left; 
+                                overflow: hidden;
+                                max-width: 100px;
+                                margin-right: 3px;
+                                font-size: 14px;
+                                color: #757575;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                            }    
+                            .small-v-icon {
+                                float: left;
+                                width: 12px;
+                                height: 12px;
+                                margin-top: 14px;
+                                background-position: -258px -68px;
+                            }
                         }
                     }
                     .collection-time {
