--- a/public/src/app/templates/channel/ActivityView.html
+++ b/public/src/app/templates/channel/ActivityView.html
@@ -6,7 +6,7 @@
 			</a>
 		</span>
 		<span class="reply-name">
-			<a href="#homepage/reply/<%=  uid %>" class="reply-name-v	">
+			<a href="#homepage/reply/<%=  uid %>" class="reply-name-v clearfix">
             	<var><%= nickname %></var>
                 <% if (is_star) { %>
             		<i class="bg-sprite-rebirth small-v-icon"></i>
