--- a/public/src/app/templates/message/MessageView.html
+++ b/public/src/app/templates/message/MessageView.html
@@ -12,10 +12,10 @@
 			<span class="paste">帖子回复</span>
 		</div>
 
-<!-- 		<div class="nav praise-nav <%= (type=='praise')? 'nav-pressed':'' %>" data="praise">
+		<div class="nav praise-nav <%= (type=='like')? 'nav-pressed':'' %>" data="like">
 			<i class="praise-icon praise-icon-pressed bg-sprite-new"></i>
 			<span class="praise">赞</span>
-		</div> -->
+		</div>
 		
 		<div class="nav attenion-nav <%= (type=='follow')? 'nav-pressed':'' %>" data="follow">
 			<i class="attention-icon attention-icon-pressed bg-sprite-new"></i>
@@ -33,8 +33,7 @@
 			<span class='message-receive nav-change'>收到的评论</span>|<span class='message-issue'>发出的评论</span>
 		</span>
 		<span class="title-system blo">系统通知</span>
-		<span class="title-praise blo">
-			<span class='message-receive nav-change'>收到的赞</span>|<span class='message-issue'>发出的赞</span>
+		<span class="title-praise blo">赞
 		</span>
 	</div>
     <div id="message-item-list" class="message-section">
