--- a/public/src/app/templates/message/MessageView.html
+++ b/public/src/app/templates/message/MessageView.html
@@ -30,10 +30,10 @@
 		<span class="title-follow blo">关注通知</span>
 		<span class="title-reply blo">帖子回复</span>
 		<span class="title-comment blo">
-			<span class='message-receive nav-change'>收到的评论</span>|<span class='message-issue'>发出的评论</span>
+			<span class='message-receive nav-change'>收到的评论 &nbsp</span> | <span class='message-issue'>&nbsp发出的评论</span>
 		</span>
 		<span class="title-system blo">系统通知</span>
-		<span class="title-praise blo">赞
+		<span class="title-praise blo">收到的赞
 		</span>
 	</div>
     <div id="message-item-list" class="message-section">
