--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -21,7 +21,7 @@ input,button,textarea,select{*font-size:100%;}
 .clearfix:after {content:"\200B"; display:block; height:0; clear:both; };
 .clearfix { *zoom:1; }
 
-.blure { s
+.blure { 
     filter: url(blur.svg#blur); /* FireFox, Chrome, Opera */
     -webkit-filter: blur(15px); /* Chrome, Opera */
        -moz-filter: blur(15px);
