--- a/public/src/app/templates/money/MoneyView.html
+++ b/public/src/app/templates/money/MoneyView.html
@@ -7,8 +7,8 @@
 		<div class="fonbox blo">
 			<div class="box">
 				<div class="box-head">请输入充值金额（元）</div>
-				<input type="text" class="box-money" placeholder="¥ 0.00">
-				<div class="confirm">确定</div>
+				<input id="amount" type="text" class="box-money" placeholder="¥ 0.00">
+				<div class="confirm weixinPay">确定</div>
 			</div>
 		</div>
 	</div>
