--- a/public/src/app/templates/money/MoneyView.html
+++ b/public/src/app/templates/money/MoneyView.html
@@ -5,10 +5,15 @@
 		<div class="recharge">充值</div>
 		<div class="withdraw">提现</div>
 		<div class="fonbox blo">
-			<div class="box">
+			<div class="box blo">
 				<div class="box-head">请输入充值金额（元）</div>
 				<input type="text" class="box-money" placeholder="¥ 0.00">
 				<div class="confirm">确定</div>
+			</div>
+			<div class="payment-method">
+				<div class="ali">支付宝</div>
+				<div class="weix">微信</div>
+				<div class="money-cancel">取消</div>
 			</div>
 		</div>
 	</div>
