--- a/public/src/less/money.less
+++ b/public/src/less/money.less
@@ -102,4 +102,34 @@
 		.blo {
 			display: none;
 		}
+		.payment-method {
+			width: 80%;
+			background-color: #fff;
+			.ali {
+				width: 100%;
+				height: 3.54rem;
+				line-height: 3.54rem;
+				text-align: center;
+				color: #4a90e2;
+				font-size: 1.14rem;
+				border-bottom: 1px solid #999 
+			}			
+			.weix {
+				width: 100%;
+				height: 3.54rem;
+				line-height: 3.54rem;
+				text-align: center;
+				color: #4a90e2;
+				font-size: 1.14rem;
+				border-bottom: 1px solid #999 
+			}
+			.money-cancel {
+				width: 100%;
+				height: 3.54rem;
+				line-height: 3.54rem;
+				text-align: center;
+				color: #000;
+				font-size: 1.14rem;
+			}
+		}
 	}
