--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -16,7 +16,7 @@ abbr,acronym{border:0;font-variant:normal;}
 sup{vertical-align:baseline;}
 sub{vertical-align:baseline;}
 legend{color:#000;}  
-input,button,textarea,select,optgroup,option{font-family:inherit; font-size:inherit;font-style:inherit;font-weight:inherit;}
+input,button,textarea,select,optgroup,option{outline:none;font-family:inherit; font-size:inherit;font-style:inherit;font-weight:inherit;}
 input,button,textarea,select{*font-size:100%;}
 .clearfix:after {content:"\200B"; display:block; height:0; clear:both; };
 .clearfix { *zoom:1; }
