--- a/public/src/less/money.less
+++ b/public/src/less/money.less
@@ -3,7 +3,6 @@ body,html {
 }
 		.money-wrap {
 			padding-top: 7.79rem;
-			min-width: 320px;
 		.pic {
 			display: block;
 			width: 7.21rem;
@@ -81,12 +80,12 @@ body,html {
 			right: 0;
 			margin: auto;
 			background-color: rgba(100,100,100,0.5);
-           display: -webkit-box;
-           display: -webkit-flex;
-           display: -ms-flexbox;
-           display: flex;
-           align-items: center;
-           justify-content: center;
+	           display: -webkit-box;
+	           display: -webkit-flex;
+	           display: -ms-flexbox;
+	           display: flex;
+	           align-items: center;
+	           justify-content: center;
 		}
 		.box {
 			width: 80%;
@@ -112,14 +111,21 @@ body,html {
 			color: #ff5b3f;
 			text-align: center;
 			border: none;	
-			}
+		}
+		input::-webkit-inner-spin-button{
+		    -webkit-appearance: none !important;
+		    margin: 0; 
+		}
+		input[type="number"] {
+			-moz-appearance: textfield;
+		}
 		.num {
 			margin-left: 0.5rem;
 		}
 		.confirm {
 			color: 000;
 			font-size: 1.14rem;
-			text-align: center;
+			text-align: center; 
 		}
 		.blo {
 			display: none;
@@ -134,7 +140,7 @@ body,html {
 				text-align: center;
 				color: #4a90e2;
 				font-size: 1.14rem;
-				border-bottom: 1px solid #999 
+				border-bottom: 1px solid #eee; 
 			}			
 			.weix {
 				width: 100%;
@@ -143,7 +149,7 @@ body,html {
 				text-align: center;
 				color: #4a90e2;
 				font-size: 1.14rem;
-				border-bottom: 1px solid #999 
+				border-bottom: 1px solid #eee; 
 			}
 			.money-cancel {
 				width: 100%;
@@ -154,4 +160,211 @@ body,html {
 				font-size: 1.14rem;
 			}
 		}
+		.common-problem	{
+			margin-top: 7.14rem;
+			margin-bottom: 0.71rem;
+			font-size: 0.79rem;
+			color: rgba(0,0,0,0.5);
+			line-height: 0.79rem;
+			text-align: center;
+		}		
+		.copyright	{
+			font-size: 0.79rem;
+			color: rgba(0,0,0,0.5);
+			line-height: 0.79rem;
+			text-align: center;
+		}
 	}
+.weixin-binding {
+	padding-top: 7.79rem;
+	padding-bottom: 2rem;
+	background-color: #fff;
+	.weixin-logo {
+		display: block;
+		width: 7.21rem;
+		height: 7.21rem;
+		margin: 0 auto 3.64rem;
+	}
+	.first {
+		margin-bottom: 1.29rem;
+		font-size: 1.5rem;
+		color: #000;
+		opacity: 0.7;
+		line-height: 1.5rem;
+		text-align: center;
+	}
+	.first-content {
+		margin-bottom: 6.04rem;
+		font-size: 1rem;
+		opacity: 0.5;
+		color: #000;
+		line-height: 1rem;
+		text-align: center;
+	}
+	.binding {
+		width: 90%;
+		height: 3rem;
+		margin: 0 auto;
+		background-color: #ff2;
+		line-height: 3rem;
+		text-align: center;
+		color: #000;
+		font-size: 1.14rem;
+		border-radius: 0.2rem;
+	}
+}
+.present-success {
+	padding-top: 7.79rem;
+	padding-bottom: 2rem;
+	background-color: #fff;
+	.present-success-logo {
+		display: block;
+		width: 6.21rem;
+		height: 7.6rem;
+		margin: 0 auto 1.89rem;
+	}
+	.present-money {
+		margin-bottom: 1rem;
+		color: #000;
+		font-size: 1.5rem;
+		text-align: center;
+	}
+	.application {
+		margin-bottom: 1rem;
+		color: #000;
+		opacity: 0.5;
+		text-align: center;
+		font-size: 1rem;
+		line-height: 1rem;
+	}
+	.account {
+		margin-bottom: 3rem;
+		color: rgba(0,0,0,0.5);
+		text-align: center;
+		font-size: 1rem;
+		line-height: 1rem;
+		.account-name {
+			color: #000;
+			opacity: 0.8;
+		}
+	}
+	.complete {
+		width: 90%;
+		height: 3rem;
+		margin: 0 auto;
+		background-color: #ff2;
+		line-height: 3rem;
+		text-align: center;
+		color: #000;
+		font-size: 1.14rem;
+		border-radius: 0.2rem;
+	}
+}
+
+.change-detail {
+	padding-top: 3.79rem;
+	padding-bottom: 2rem;
+	background-color: #fff;
+	.detail-content-first {
+		padding: 1.29rem 4%;
+		border-bottom: 1px solid #eee;
+		border-top: 1px solid #eee;
+		.first-left {
+			float: left;
+			width: 75%;
+			.first-p {
+				font-size: 1rem;
+				color: #000;
+				opacity: 0.8;
+				line-height: 1rem;
+				margin-bottom: 0.82rem;
+			}
+			.first-time {
+				font-size: 0.79rem;
+				line-height: 0.79rem;
+				opacity: 0.3;
+				color: #000;
+			}
+		}
+		.first-right {
+			float: right;
+			width: 25%;
+			padding-top: 1.43rem;
+			color: #f5a623;
+			opacity: 0.9;
+			font-style: 1.29rem;
+			text-align: right;
+			line-height: 1.29rem;
+		}
+	} 
+	.detail-content-second {
+		padding: 1.29rem 4%;
+		border-bottom: 1px solid #eee;
+		.second-left {
+			float: left;
+			width: 75%;
+			.second-p {
+				font-size: 1rem;
+				color: #000;
+				opacity: 0.8;
+				line-height: 1rem;
+				margin-bottom: 0.82rem;
+			}
+			.second-time {
+				font-size: 0.79rem;
+				line-height: 0.79rem;
+				opacity: 0.3;
+				color: #000;
+			}
+		}
+		.second-right {
+			float: right;
+			width: 25%;
+			padding-top: 1.43rem;
+			color: #8dc81b;
+			opacity: 0.9;
+			font-style: 1.29rem;
+			text-align: right;
+			line-height: 1.29rem;
+		}
+	} 
+	.detail-content-three {
+		padding: 1.29rem 4%;
+		border-bottom: 1px solid #eee;
+		.three-left {
+			float: left;
+			overflow: hidden;
+			width: 11%;
+			height: 2.71rem;
+			margin-right: 3%;
+			border-radius: 50%;
+		}
+		.three-middle {
+			float: left;
+			width: 70%;
+			.three-p {
+				font-size: 1rem;
+				color: #000;
+				opacity: 0.8;
+				line-height: 1rem;
+				margin-bottom: 0.82rem;
+			}
+			.three-time {
+				font-size: 0.79rem;
+				line-height: 0.79rem;
+				opacity: 0.3;
+				color: #000;
+			}
+		}
+		.three-right {
+			float: right;
+			width: 16%;
+			padding-top: 1.43rem;
+			color: #8dc81b;
+			opacity: 0.9;
+			font-style: 1.29rem;
+			text-align: right;
+			line-height: 1.29rem;
+		}
+	} 
+}
