--- a/public/src/app/templates/money/MoneyView.html
+++ b/public/src/app/templates/money/MoneyView.html
@@ -1,4 +1,4 @@
-<div class="money-wrap hide">
+<div class="money-wrap">
 	<img src="img/ic_money.png" alt="" class="pic">
 	<div class="my-money">我的零钱</div>
 	<div class="money"><em>¥</em><span class="num">2,00</span><var>元</var></div>
@@ -22,7 +22,7 @@
 	</div>
 </div>
 
-<div class="weixin-binding hide">
+<div class="weixin-binding">
 	<img src="img/wechat.png " alt="" class="weixin-logo">
 	<div class="first">
 		第一步 &nbsp&nbsp请绑定微信
