--- a/public/src/less/money.less
+++ b/public/src/less/money.less
@@ -78,14 +78,15 @@ body,html {
 			bottom: 0;
 			left: 0;
 			right: 0;
+			z-index: 9;
 			margin: auto;
 			background-color: rgba(100,100,100,0.5);
-	           display: -webkit-box;
-	           display: -webkit-flex;
-	           display: -ms-flexbox;
-	           display: flex;
-	           align-items: center;
-	           justify-content: center;
+           	display: -webkit-box;
+           	display: -webkit-flex;
+           	display: -ms-flexbox;
+           	display: flex;
+           	align-items: center;
+           	justify-content: center;
 		}
 		.box {
 			width: 80%;
