--- a/public/src/less/replydetailplay.less
+++ b/public/src/less/replydetailplay.less
@@ -177,7 +177,7 @@
 			float: left;
 			width: 355px;
 			height: 720px;
-			.reply-more {
+			.reply-detail-more {
 				position: absolute;
 				z-index: 999;
 				bottom: 0px;
