--- a/public/src/less/trend.less
+++ b/public/src/less/trend.less
@@ -49,6 +49,7 @@
 			width: 580px;
 			padding: 25px 25px 20px;
 			background-color: #fff;
+			box-shadow: -1px 1px 9px -1px #ccc;
 			.slice {
 				position: absolute;
 				top: 0;
