--- a/public/src/app/templates/replydetailplay/ReplyDetailPlayView.html
+++ b/public/src/app/templates/replydetailplay/ReplyDetailPlayView.html
@@ -38,7 +38,6 @@
 		</div>
 
 		<div class="reply-detail-ifo">
-			<div class="reply-more blo">查看更多评论</div>
 			<div class="right-content">
 				<!-- 信息 -->
 				<div class="reply-user clearfix" >
@@ -63,6 +62,7 @@
 					</div>
 				</div>
 			</div>
+			<div class="reply-detail-more"><span>查看更多评论</span></div>
 		</div>
 	</div>
 </div>
