--- a/public/src/app/templates/replydetailplay/ReplyDetailPlayView.html
+++ b/public/src/app/templates/replydetailplay/ReplyDetailPlayView.html
@@ -62,7 +62,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="reply-detail-more"><span>查看更多评论</span></div>
+			<div class="reply-detail-more blo" id="aaaa"><span id="chaMore">查看更多评论</span></div>
 		</div>
 	</div>
 </div>
