--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -350,8 +350,11 @@ img.emojione {
     z-index: 999; 
 }
 #headerView {
-width: 1280px;
+    width: 1280px;
     margin: 0 auto;
+    .logo-header-center{
+        position: relative;
+    }  
 }
 .opacity {
     opacity: 0;
@@ -450,11 +453,18 @@ width: 1280px;
     height: 19px;
     background-position: -71px -45px;
 }
+.header-block {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 45px;
+    background-color: #000;
+}
 .header-container {
     .logo-left-top {
     position: absolute;
     top: 10px;
-    left: 100px;
 }
         .logo {
             display: inline-block;
@@ -592,7 +602,7 @@ width: 1280px;
             }
             .remind-message {
                 position: relative; 
-                margin-left: 8px;
+                margin-left: 10px;
                 margin-right: 2px;
                 .message-remind-icon {
                      width: 25px;
@@ -642,7 +652,6 @@ width: 1280px;
             }
             .app-tupai {
                 position: relative;
-                margin-right: 100px;
 
                 .download-picture {
                     display: none;
@@ -1799,6 +1808,7 @@ width: 1280px;
     #headerView {
         width: auto;
     }
+  
    .header .title-bar {
         width: 100%;
         height: 67px;
