--- a/public/src/less/replydetailplay.less
+++ b/public/src/less/replydetailplay.less
@@ -179,7 +179,7 @@
 			height: 720px;
 			.reply-detail-more {
 				position: absolute;
-				z-index: 999;
+				z-index: 9999999;
 				bottom: 0px;
 				left: 1px;
 				width: 334px;
@@ -191,6 +191,13 @@
 				line-height: 55px;
 				text-align: center;
 				cursor: pointer;
+				span {
+					display: block;
+					width: 100%;
+					height: 100%;
+					line-height: 55px;
+					text-align: center;
+				}
 			}
 			.right-content {
 				.reply-user {
