--- a/public/src/less/search.less
+++ b/public/src/less/search.less
@@ -56,24 +56,22 @@
 			margin-top: 38px;
 			margin-bottom: 10px;
 			display: block;
-				.more {
-				    display: inline-block;
-				    width: 50px;
+			.more {
+			    width: 43px;
+			    height: 20px;
+			    float: right;
+			    line-height: 20px;
+			    position: relative;
+			    padding-right: 6px;
+				.more-icon {
+					float: right;
+				    width: 15px;
 				    height: 20px;
-				    float: right;
-				    line-height: 20px;
-				    position: relative;
-					.more-icon {
-					    display: inline-block;
-					    width: 15px;
-					    height: 14px;
-					    background-position: -194px -115px;
-					    right: 5px;
-					    position: absolute;
-					    top: 3px;
-					    cursor: pointer;
-					}
+				    background-position: -194px -111px;
+				    right: 5px;
+				    cursor: pointer;
 				}
+			}
 		}
 			.search-user {
 				margin-right: 12px;
@@ -154,29 +152,27 @@
 
 .correlation-section {
 	.correlation-content {
-		  		    color: #000;
-			    font-size: 12px;
-			    margin-top: 38px;
-			    margin-bottom: 10px;
-			    display: block;
-			    				.more {
-				    display: inline-block;
-				    width: 50px;
-				    height: 20px;
-				    float: right;
-				    line-height: 20px;
-				    position: relative;
-					.more-icon {
-					    display: inline-block;
-					    width: 15px;
-					    height: 14px;
-					    background-position: -194px -115px;
-					    right: 5px;
-					    position: absolute;
-					    top: 3px;
-					    cursor: pointer;
-					}
-				}
+	    color: #000;
+	    font-size: 12px;
+	    margin-top: 38px;
+	    margin-bottom: 10px;
+	    display: block;
+		.more {
+		    width: 43px;
+		    height: 20px;
+		    float: right;
+		    padding-right: 6px;
+		    line-height: 20px;
+		    position: relative;
+			.more-icon {
+				float: right;
+			    width: 15px;
+			    height: 20px;
+			    background-position: -194px -111px;
+			    right: 5px;
+			    cursor: pointer;
+			}
+		}
 	}
 
     .hot-section {  
@@ -328,20 +324,18 @@
 			    margin-bottom: 10px;
 			    display: block;
 				.more {
-				    display: inline-block;
-				    width: 50px;
+				    width: 43px;
 				    height: 20px;
 				    float: right;
+				    padding-right: 6px;
 				    line-height: 20px;
 				    position: relative;
 					.more-icon {
-					    display: inline-block;
+						float: right;
 					    width: 15px;
-					    height: 14px;
-					    background-position: -194px -115px;
+					    height: 20px;
+					    background-position: -194px -111px;
 					    right: 5px;
-					    position: absolute;
-					    top: 3px;
 					    cursor: pointer;
 					}
 				}
