--- a/public/src/less/replydetailplay.less
+++ b/public/src/less/replydetailplay.less
@@ -1,8 +1,8 @@
 .reply-detail-content {
 	background-color: #F6F6F6;
-	.border-bot {
+/*	.border-bot {
         border-bottom: none !important;
-	}
+	}*/
 	.detail-content {
 		width: 1180px;
 		height: 750px;
@@ -369,7 +369,7 @@
 						.reply-inp {
 							position: relative;
 							padding-bottom: 13px;
-							border-bottom: 1px solid #ddd;
+							/*border-bottom: 1px solid #ddd;*/
 
 							.icon-add-emoji {
 								position: absolute;
@@ -416,7 +416,7 @@
 						.user-ifo {
 							padding: 20px 10px 10px;
 							padding-bottom: 12px;
-							border-bottom: 1px solid #ddd;
+							border-top: 1px solid #ddd;
 							background-color: #EDEDED;
 							.sculpture {
 								overflow: hidden;
