--- a/public/src/less/replydetailplay.less
+++ b/public/src/less/replydetailplay.less
@@ -145,7 +145,7 @@
 							img {
 								position: absolute;
 							}
-							.other-icon:hover {
+							.reply-other-icon:hover {
 								position: absolute;
 								display: block;
 							    top: 5px;
@@ -157,7 +157,7 @@
 						}
 					}
 					.other-pic:hover {
-						.other-icon {
+						.reply-other-icon {
 							position: absolute;
 							display: block;
 						    top: 5px;
