--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -477,10 +477,12 @@ img.emojione {
 
         }  
     .profile-view {
-        display: inline-block;
+        float: left;
+        /*display: inline-block;*/
     }
     .login-view {
-        display: inline-block;
+        float: left;
+        /*display: inline-block;*/
     }
     .header-back {
         background-repeat: no-repeat;
@@ -520,6 +522,10 @@ img.emojione {
                 position: absolute;
                 right: 1px;
                 top: 3px;
+                line-height: 36px;
+                .tup-introduce {
+                    float: left;
+                }
             li {
                 display: inline-block;
                 vertical-align: middle;
