--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -459,7 +459,7 @@ img.emojione {
     left: 0;
     width: 100%;
     height: 45px;
-    background-color: #000;
+    background-color: #1A1919;
 }
 .header-container {
     .logo-left-top {
