--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -415,17 +415,13 @@
         }
 		.channel-header-nav {
 			overflow: hidden;
-			width: 1200px;
-		}
-		.channel-nav {
-			float: left;
-			overflow: hidden;
 			width: 1180px;
+			height: 80px;
 			.nav-scroll {
-				width: 5000px;
+				width: 1200px;
 			}
 		}
-			.header-nav {
+		.header-nav {
 
 				position: relative;
 				float: left; 
