--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -1785,10 +1785,15 @@ img.emojione {
 @media screen and (max-width:640px) {
     html,body {
         width: 100% !important;
+        overflow-y: hidden; 
     }
     .slogan {
         overflow: hidden;
         width: 100% !important;    
+        img {
+            display: block;
+            width: 100%;
+        }
     }
     .header .title-bar {
         widows: 100%;
