--- a/public/src/app/templates/sharecourse/ShareCourseView.html
+++ b/public/src/app/templates/sharecourse/ShareCourseView.html
@@ -41,10 +41,10 @@
 		</div>
 	</div>
 
-	<div class="course-fix">
+	<a href="/src/app/statics/recommend/recommend.html" class="course-fix">
 		<p>点击下载App，查看更多PS图片和教程</p>
 		<div class="logo">
 			<img src="/img/tulogo.png" alt="">
 		</div>
-	</div>
+	</a>
 </div>
