--- a/public/src/app/statics/recommend/recommend.html
+++ b/public/src/app/statics/recommend/recommend.html
@@ -87,14 +87,14 @@
                        <div class="weixin clearfix">
                          <em class="weixin-icon bg-sprite-new"></em>
                          <span class="official">官方微信：图派社区</span>
-                         <img src="/img/recommend/wechat_code.jpg">
+                         <!-- <img src="/img/recommend/wechat_code.jpg"> -->
                        </div>
                 </div>
             
                  <div class="contact-up">
                      <span class="app-intro">地址：深圳市南山区华中科技大学深圳产学研基地</span>
                      <span>反馈QQ：2974252463</span>
-                     <span>反馈微信：:2202411857</span>
+                     <span>反馈微信：2202411857</span>
                      <span>用户QQ群：511828428</span>
                      <span>意见反馈邮箱：i@tupppai.com</span>  
                  </div>
@@ -116,7 +116,7 @@ $(function(){
             mode : 'auto',     // auto || contain || cover 
             width : '800',      //输入页面的宽度，只支持输入数值，默认宽度为320px
             height : '1300'      //输入页面的高度，只支持输入数值，默认高度为504px
-        })
+        })       
     }
     
 })
