--- a/public/src/less/task.less
+++ b/public/src/less/task.less
@@ -1,4 +1,5 @@
 .task-content {
+	min-width: 320px;
 	background-color: #fff;
 	color: #000;
 	margin-bottom: 1rem;
@@ -81,6 +82,7 @@
 			}
 		}
 		.task-artwork {
+			z-index: 9;
 			position: absolute;
 			bottom: 0;
 			right: 0;
