--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -1785,7 +1785,7 @@ img.emojione {
 @media screen and (max-width:640px) {
     html,body {
         width: 100% !important;
-        overflow-y: hidden; 
+        overflow-x: hidden; 
     }
     .slogan {
         overflow: hidden;
