--- a/public/src/less/sharecourse.less
+++ b/public/src/less/sharecourse.less
@@ -58,8 +58,10 @@
 			font-size: 1.79rem;
 		}
 		.explain-p {
-			padding: 0 15%;
-			margin-bottom: 3.36rem;
+			width: 67%;
+			margin: 0 auto 3.36rem;
+			border-left: 4px solid #000;
+			padding-left: 3%;
 			opacity: 0.5;
 			font-size: 1rem;
 			line-height: 1.43rem;
