--- a/public/sharecourse/css/task.css
+++ b/public/sharecourse/css/task.css
@@ -31,7 +31,7 @@
   line-height: 3.21rem;
 }
 .task-content .header .header-box .share-channge {
-  height: 3.1rem;
+  height: 3.05rem;
   border-bottom: 0.21rem solid #FFEF00;
   font-weight: bold;
   line-height: 3.1rem;
@@ -73,6 +73,7 @@
   display: block;
   font-size: 0.93rem;
   margin-bottom: 0.2rem;
+  line-height: 1rem;
 }
 .task-content .task-header .task-head-right .task-name-time {
   opacity: 0.6;
@@ -301,7 +302,7 @@
   width: 100%;
   height: 4.29rem;
   background-color: #fff;
-  box-shadow: 0 -1px 13px #aaa;
+  box-shadow: 0 -1px 4px #aaa;
 }
 .task-content .course-fix p {
   font-size: 1rem;
