--- a/public/sharecourse/less/task.less
+++ b/public/sharecourse/less/task.less
@@ -28,7 +28,7 @@
 				line-height: 3.21rem;
 			}
 			.share-channge {
-				height: 3.1rem;
+				height: 3.05rem;
 				border-bottom: 0.21rem solid #FFEF00;
 				font-weight: bold;
 				line-height: 3.1rem;
@@ -70,6 +70,7 @@
 				display: block;
 				font-size: 0.93rem;
 				margin-bottom: 0.2rem;
+				line-height: 1rem;
 			}
 			.task-name-time {
 				opacity: 0.6;
@@ -302,7 +303,7 @@
 		width: 100%;
 		height: 4.29rem;
 		background-color: #fff;
-		box-shadow: 0 -1px 13px #aaa;
+		box-shadow: 0 -1px 4px #aaa;
 		p {
 			font-size: 1rem;
 			color: #000;
