--- a/public/sharecourse/less/task.less
+++ b/public/sharecourse/less/task.less
@@ -3,6 +3,7 @@
 	background-color: #fff;
 	color: #000;
 	margin-bottom: 1rem;
+	padding-bottom: 2.5rem;
 	.blo {
 		display: none;
 	}
@@ -34,6 +35,9 @@
 				line-height: 3.1rem;
 			}
 		}
+	}
+	.task-contain {
+	    border-bottom: 0.6rem solid #ccc;
 	}
 	.task-header {
 		padding: 0.86rem 3%;
