--- a/public/sharecourse/css/task.css
+++ b/public/sharecourse/css/task.css
@@ -3,6 +3,7 @@
   background-color: #fff;
   color: #000;
   margin-bottom: 1rem;
+  padding-bottom: 2.5rem;
 }
 .task-content .blo {
   display: none;
@@ -35,6 +36,9 @@
   border-bottom: 0.21rem solid #FFEF00;
   font-weight: bold;
   line-height: 3.1rem;
+}
+.task-content .task-contain {
+  border-bottom: 0.6rem solid #ccc;
 }
 .task-content .task-header {
   padding: 0.86rem 3%;
