--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -392,7 +392,7 @@
             }
             .hot-name {
                 float: left;
-                padding-top: 6px;
+                /*padding-top: 6px;*/
                 color: #000;
                 font-size: 12px;
                 margin-left: 10px;
@@ -400,12 +400,12 @@
                 .foot-write {
                     float: left;
                     overflow: hidden;
-                    max-width: 100px;
-                    height: 12px;
+                    max-width: 85px;
+                    height: 24px;
                     margin-right: 3px;
                     color: #000;
                     font-size: 12px;
-                    line-height: 12px;
+                    line-height: 24px;
                     text-overflow: ellipsis;
                     white-space: nowrap;
                 }   
@@ -413,6 +413,7 @@
                     float: left;
                     width: 12px;
                     height: 12px;
+                    margin-top: 5px;
                     background-position: -258px -68px;
                 }
             }
