--- a/public/boys/src/app/views/index/IndexView.html
+++ b/public/boys/src/app/views/index/IndexView.html
@@ -11,5 +11,5 @@
 			<li class="swiper-slide"><img class="main-img" src="/images/yiyangqianxi.png" alt=""></li>
 		</ul>
 	</div>
-	<a href="cn/my-make.html" class="choice"></a>
+	<a href="../selectmale/selectmale" class="choice"></a>
 </div>
