--- a/public/boys/src/app/views/getavatar/GetAvatarView.html
+++ b/public/boys/src/app/views/getavatar/GetAvatarView.html
@@ -1,17 +1,17 @@
 <div class="get-avatar">
     <div class="avatar-style ">
-        <img class="after" src="../img/liyifeng_big@2x.png">
-        <img class="before" src="../img/liyifeng_little@2x.png">
+        <img class="after" src="/images/liyifeng_big@2x.png">
+        <img class="before" src="/images/liyifeng_little@2x.png">
         <div class="fans"></div>
     </div>
-    <div class="tips"><img src="../img/03tips01.png"></div>
+    <div class="tips"><img src="/images/03tips01.png"></div>
     <div class="btn-panel">
         <a href="#upload" class="upload"></a>
         <a href="#share" class="share"></a>
     </div>
 </div>
-<div class="pop-howto">
+<div class="pop-howto none">
     <div class="pop-main">
-        <a href="#iagree" class="read"></a>
+        <a href="../shareavatar/shareavatar" class="read"></a>
     </div>
 </div>
