--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -41,7 +41,15 @@ input:-ms-input-placeholder {
 input::-webkit-input-placeholder {
 	color: #fff;
 }
-
+.container {
+    height: 100%;
+}
+.inner-container {
+    height: 100%;
+}
+.inner-container>div {
+    height: 100%;
+}
 
 
 .wrap-index {
@@ -265,6 +273,7 @@ input::-webkit-input-placeholder {
 		}
 	}
 	.want-mank {
+        display: block;
 		position: relative;
 		width: 41%;
 		height: 4.46rem;
