--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,6 +157,15 @@ input:-ms-input-placeholder {
 input::-webkit-input-placeholder {
   color: #fff;
 }
+.container {
+  height: 100%;
+}
+.inner-container {
+  height: 100%;
+}
+.inner-container > div {
+  height: 100%;
+}
 .wrap-index {
   height: 100%;
   overflow: hidden;
@@ -370,6 +379,7 @@ input::-webkit-input-placeholder {
   height: 2.86rem;
 }
 .my-make .want-mank {
+  display: block;
   position: relative;
   width: 41%;
   height: 4.46rem;
