--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -40,7 +40,7 @@
 		<li><img src="/images/user.png" alt=""></li>
 	</ul>
 
-	<div class="want-mank">
+	<a href="../shareavatar/shareavatar" class="want-mank">
 		<img src="/images/girl.png" alt="">
-	</div>
+	</a>
 </div>
