--- a/public/boys/src/app/views/index/IndexView.html
+++ b/public/boys/src/app/views/index/IndexView.html
@@ -1,6 +1,6 @@
 <div class="wrap-index">
 	<div class="wrap-kong"></div>
-	<div class="pic-box swiper-container">
+	<div class="pic-box swiper-container none">
 		<ul class="men-god clearfix swiper-wrapper">
 			<li class="swiper-slide"><img class="main-img" src="/images/huge.png" alt=""></li>
 			<li class="swiper-slide"><img class="main-img" src="/images/liyifeng.png" alt=""></li>
@@ -11,5 +11,5 @@
 			<li class="swiper-slide"><img class="main-img" src="/images/yiyangqianxi.png" alt=""></li>
 		</ul>
 	</div>
-	<a href="../selectmale/selectmale" class="choice"></a>
+	<div id="select_boy"><a   class="choice"></a></div>
 </div>
