--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -29,6 +29,9 @@ body, html {
     color: #fff;
     height: 100%;
 }
+#__loading {
+    display: none !important;
+}
 .none {
     display: none !important;  
 }
