--- a/public/boys/src/app/views/index/IndexView.html
+++ b/public/boys/src/app/views/index/IndexView.html
@@ -1,6 +1,6 @@
 <div class="wrap-index">
 	<div class="wrap-kong"></div>
-	<div class="pic-box swiper-container none">
+	<div class="pic-box swiper-container">
 		<ul class="men-god clearfix swiper-wrapper">
 			<li class="swiper-slide"><img class="main-img" src="/images/huge.png" alt=""></li>
 			<li class="swiper-slide"><img class="main-img" src="/images/liyifeng.png" alt=""></li>
