--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -105,10 +105,13 @@ input::-webkit-input-placeholder {
 		}
 	}
 	.choice {
+        position: absolute;
+        bottom: 2.5rem;
+        left: 50%;
+        margin-left: -20.5%;
 		display: block;
 		width: 41%;
 		height: 3.86rem;
-		margin: 0 auto;
 		background: url(/images/btn.png) 0 0 no-repeat;
 		background-size: contain;
 	}
