--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -17,6 +17,7 @@
 		<li><img src="/images/design.png" alt=""></li>
 	</ul>	
 
+	<div id="flyItem" class="fly_item"><img src=""></div>
 	<ul class="designer-pic clearfix">
 		<li><img src="/images/huge_little.png" alt=""></li>
 		<li><img src="/images/wangyuan.png" alt=""></li>
