--- a/public/boys/src/app/views/uploadsuccess/UploadSuccessView.html
+++ b/public/boys/src/app/views/uploadsuccess/UploadSuccessView.html
@@ -1,4 +1,5 @@
 <div class="upload-success">
     <div class="main"><img src="/images/06queue01.png"></div>
     <div class="qr"><img class="qrcode" src="/images/qr.png"></div>
+    <div class="copyright">本次活动为免费活动，P图者均为ps爱好者，以娱乐为主，如有不周概不负责</div>
 </div>
