--- a/public/css/main.css
+++ b/public/css/main.css
@@ -171,12 +171,11 @@ input::-webkit-input-placeholder {
 }
 .wrap-index {
   height: 100%;
-  overflow: hidden;
   background: url(/images/bg1.png) 0 0 no-repeat;
   background-size: cover;
 }
 .wrap-index .wrap-kong {
-  height: 12.79rem;
+  height: 11.79rem;
 }
 .wrap-index .swiper-container {
   width: 100%;
@@ -220,6 +219,7 @@ input::-webkit-input-placeholder {
 }
 .wrap-index .choice {
   position: absolute;
+  z-index: 9999;
   bottom: 2.5rem;
   left: 50%;
   margin-left: -20.5%;
@@ -230,10 +230,10 @@ input::-webkit-input-placeholder {
   background-size: contain;
 }
 .my-make {
-  overflow: hidden;
+  /*overflow: hidden;*/
   background: #fbd398 url(/images/2bg.png) 0 0 no-repeat;
   background-size: contain;
-  height: 100%;
+  /*height: 100%;*/
   /*padding-bottom: 2.75rem;*/
   /*    .men-box {
         width: 100%;
@@ -321,6 +321,24 @@ input::-webkit-input-placeholder {
     -o-transform: translateX(-3rem) translateY(1.2rem) rotate(-8deg);
     transform: translateX(-3rem) translateY(1.2rem) rotate(-8deg);
   }
+}
+.my-make .fly_item {
+  z-index: 99;
+  border: 0;
+  width: 3.13rem;
+  height: 3.13rem;
+  overflow: hidden;
+  position: absolute;
+  visibility: hidden;
+  border-radius: 0.3rem;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  left: 0;
+  top: 0;
+}
+.my-make .fly_item img {
+  display: block;
+  width: 100%;
 }
 .my-make .designer-name {
   width: 95%;
@@ -571,6 +589,15 @@ input::-webkit-input-placeholder {
   height: 7.54rem;
   width: 7.54rem;
   border: none;
+}
+.upload-success .copyright {
+  display: block;
+  position: absolute;
+  bottom: 1rem;
+  width: 100%;
+  color: #d0a788;
+  font-size: 0.64rem;
+  text-align: center;
 }
 .upload-again {
   position: relative;
