--- a/public/boys/src/app/views/shareavatar/ShareAvatarView.html
+++ b/public/boys/src/app/views/shareavatar/ShareAvatarView.html
@@ -11,7 +11,7 @@
             <a href=""><img src="/images/4btn_b@3x.png"></a>
         </div>
         <div class="tips"><img src="/images/04tips01.png"></div>
-        <div class="btn-panel">
-            <a href="#upload" class="upload"></a>
+        <div id="uploadImage" class="btn-panel">
+            <div  class="upload"></div>
         </div>
     </div>
