--- a/public/boys/src/app/views/shareavatar/ShareAvatarView.html
+++ b/public/boys/src/app/views/shareavatar/ShareAvatarView.html
@@ -6,9 +6,9 @@
             <div class="fans"></div>
         </div>
         <div class="effect-list">
-            <a href=""><img src="/images/4btn_c@3x.png"></a>
-            <a href=""><img src="/images/4btn_a@3x.png"></a>
-            <a href=""><img src="/images/4btn_b@3x.png"></a>
+            <span><img src="/images/4btn_c@3x.png"></span>
+            <span><img src="/images/4btn_a@3x.png"></span>
+            <span><img src="/images/4btn_b@3x.png"></span>
         </div>
         <div class="tips"><img src="/images/04tips01.png"></div>
         <div id="uploadImage" class="btn-panel">
