--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -348,7 +348,7 @@ input::-webkit-input-placeholder {
             height: 4.29rem;
             width: 4.29rem;
             border: none;
-            border-radius: 9%;
+            border-radius: 18%;
         }
         .fans {
             position: absolute;
@@ -629,12 +629,14 @@ input::-webkit-input-placeholder {
         overflow: hidden;
         text-align: center;
         margin: 1.25rem auto;
-        a {
+        span {
+            overflow: hidden;
             position: relative;
             display: inline-block;
             height: 4.29rem;
             width: 4.29rem;
             margin: 0.43rem;
+            border-radius: 18%;
             img {
                 border: none;
                 height: 100%;
