--- a/public/boys/src/app/views/index/IndexView.html
+++ b/public/boys/src/app/views/index/IndexView.html
@@ -12,4 +12,6 @@
 		</ul>
 	</div>
 	<a href="boys/selectmale/selectmale"  class="choice"></a>
+	<div class="finger-left"></div>
+	<div class="finger-right"></div>
 </div>
