--- a/public/boys/src/app/views/getavatar/GetAvatarView.html
+++ b/public/boys/src/app/views/getavatar/GetAvatarView.html
@@ -6,12 +6,12 @@
     </div>
     <div class="tips"><img src="/images/03tips01.png"></div>
     <div class="btn-panel">
-        <a href="#upload" class="upload"></a>
+        <a  class="upload"></a>
         <a href="#share" class="share"></a>
     </div>
 </div>
 <div class="pop-howto none">
     <div class="pop-main">
-        <a href="../shareavatar/shareavatar" class="read"></a>
+        <a id="uploadImage" class="read"></a>
     </div>
 </div>
